--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
 env
-__pycache__
+**/__pycache__
 daily.json.template
 speedtest-monitor.log
 test.py
 .vscode
-current.json
-daily.json
-monthly.json
-yearly.json
+*.json
