add basic config skeleton

--- a/etc/config.ini
+++ b/etc/config.ini
@@ -1,6 +1,8 @@
 [General]
-database = #tinydb / mongodb
-interval = 60
+speedtest-server = 
+datapath = 
+database = 
+interval = 
 
 [Database]
 user = 
