edited config key order

--- a/etc/config.ini
+++ b/etc/config.ini
@@ -1,14 +1,14 @@
 [General]
 speedtest-server = 
-datapath = 
-database = 
 interval = 
 
 [Database]
+type = 
+datapath = 
+host =
 user = 
 password = 
-host = 
 
-[logging]
-loglevel = 
+[Logging]
 logpath = 
+loglevel = 
