--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,21 +5,27 @@ jobs:
       - image: python:3.7-alpine
     steps:
       - checkout
-      - run: pwd
-      - run: ls -l
-  test:
-    docker: 
-      - image: python:3.7-alpine
-    steps:
+      - run: 
+          name: Install dependencies
+          command: pip3 install -r requirments.txt
       - run:
-          name: Output home dir
-          command: 'echo $HOME' 
+          name: Run bandwidth-monitor service
+          command: python3 bandwidth-monitor/main.py &
+      - run:
+          name: Store PID in variable
+          command: bwm_pid=$!
+      - run:
+          name: Wait for bandwidth-monitor to init and measure once
+          command: sleep 15
+      - run:
+          name: Terminate bandwidth-monitor service
+          command: kill -s SIGINT $bwm_pid
+      - run:
+          name: Output logs
+          command: cat log/bwm.log
 
 workflows:
   version: 2
   build:
     jobs:
       - build
-  test:
-    jobs:
-      - test
