--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,11 @@
-version: 2
+version: 2.1
+
+executors:
+  my-executor:
+    docker:
+      - image: buildpack-deps:jessie
+    working_directory: /tmp/bwm
+
 jobs:
   build:
     machine: true
@@ -28,7 +35,7 @@ jobs:
 
       - run:
           name: Import bandwidth-monitor image
-          command: docker import docker/bwm.tar racoon/bandwidth-monitor
+          command: docker load docker/bwm.tar racoon/bandwidth-monitor
 
       - run:
           name: Run a instance of bandwidth-monitor image
