--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
 
       - run:
           name: Run a instance of bandwidth-monitor image
-          command: docker run -d --rm --name bwm -e LOGLEVEL="debug" -e DBTYPE="tinydb" -v $PWD:/bwm/data racoon/bandwidth-monitor
+          command: docker run -d --rm --name bwm -e LOGLEVEL="debug" -e DBTYPE="tinydb" -v ~/bwm/data:/bwm/data racoon/bandwidth-monitor
 
       - run:
           name: Wait until the first measure was made
@@ -44,7 +44,7 @@ jobs:
 
       - run:
           name: Test if data was created
-          command: if test -f data/data.json; then echo "success"; else echo "fail"; fi
+          command: test -f ~/bwm/data/data.json
 
 workflows:
   version: 2
