refactored and restructured code

--- a/config.ini
+++ b/config.ini
@@ -3,8 +3,8 @@ speedtest-server =
 interval = 
 
 [Database]
-type = 
-datapath = 
+type = tinydb
+datapath = data/bwm.json
 host =
 user = 
 password = 
