--- a/config.ini
+++ b/config.ini
@@ -3,12 +3,12 @@ speedtest-server =
 interval = 
 
 [Database]
-type = tinydb
-datapath = data/bwm.json
-host =
-user = 
-password = 
+type = 
+datapath = 
+dbhost = 
+dbuser = 
+dbpassword = 
 
 [Logging]
-logpath = 
+logpath =
 loglevel = 
