--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 
 jobs:
   build:
-    working_directory: ~/
+    working_directory: ~/bwm
     machine: true
     steps:
       - checkout
@@ -15,10 +15,10 @@ jobs:
       
       - run:
           name: Export docker container image
-          command: docker save --output ~/docker/bwm.tar racoon/bandwidth-monitor
+          command: docker save --output ~/bwm/docker/bwm.tar racoon/bandwidth-monitor
       
       - persist_to_workspace:
-          root: ~/docker
+          root: ~/bwm/docker
           paths: 
             - bwm.tar
   
@@ -32,11 +32,11 @@ jobs:
 
       - run:
           name: Import bandwidth-monitor image
-          command: docker load -i ~/docker/bwm.tar
+          command: docker load -i ~/bwm/docker/bwm.tar
 
       - run:
           name: Run a instance of bandwidth-monitor image
-          command: docker run -d --rm --name bwm -e LOGLEVEL="debug" -e DBTYPE="tinydb" -v ~/data:/bwm/data racoon/bandwidth-monitor
+          command: docker run -d --rm --name bwm -e LOGLEVEL="debug" -e DBTYPE="tinydb" -v ~/bwm/data:/bwm/data racoon/bandwidth-monitor
 
       - run:
           name: Wait until the first measurement was made
@@ -44,7 +44,7 @@ jobs:
 
       - run:
           name: Test if data was created
-          command: test -f ~/data/bwm.json
+          command: test -f ~/bwm/data/bwm.json
 
 workflows:
   version: 2
