added missing bwm dir

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
       - checkout
 
       - attach_workspace:
-          at: ~/docker
+          at: ~/bwm/docker
 
       - run:
           name: Import bandwidth-monitor image
