--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,90 @@
 version: '3.1'
 
 services:
-
   bwm:
     image: racoon/bandwidth-monitor
     restart: always
     depends_on: 
-      - mongo
+      - influx-db
     networks:
       - bwm
     environment:
-      DBTYPE: mongodb
-      DBHOST: mongo
+      DBTYPE: influx
+      DBHOST: influx-db
       DBUSER: bwm
       DBPASSWORD: bwm
-
-  mongo:
-    image: mongo
-    restart: always
-    networks:
-      - bwm
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: bwm
-      MONGO_INITDB_ROOT_PASSWORD: bwm
-
-  mongo-express:
-    image: mongo-express
-    restart: always
-    depends_on: 
-      - mongo
-    networks:
-      - bwm
+  influx-db:
+    image: influxdb:latest
     ports:
-      - 8081:8081
+      - '8086:8086'
+    volumes:
+      - influxdb-storage:/var/lib/influxdb
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: bwm
-      ME_CONFIG_MONGODB_ADMINPASSWORD: bwm
+      - INFLUXDB_DB=bwm-db
+      - INFLUXDB_USER=${INFLUXDB_USERNAME}
+      - INFLUXDB_PASSWORD=${INFLUXDB_PASSWORD}
+  chronograf:
+    image: chronograf:latest
+    ports:
+      - '8888:8888'
+    volumes:
+      - chronograf-storage:/var/lib/chronograf
+    depends_on:
+      - influxdb
+    environment:
+      - INFLUXDB_URL=http://influxdb:8086
+      - INFLUXDB_USERNAME=${INFLUXDB_USERNAME}
+      - INFLUXDB_PASSWORD=${INFLUXDB_PASSWORD}
+  grafana:
+    image: grafana/grafana:latest
+    ports:
+      - '3000:3000'
+    volumes:
+      - grafana-storage:/var/lib/grafana
+      - ./grafana-provisioning/:/etc/grafana/provisioning
+    depends_on:
+      - influxdb
+    environment:
+      - GF_SECURITY_ADMIN_USER=${GRAFANA_USERNAME}
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASSWORD}
+
+
+
+
+  # mongo:
+  #   image: mongo
+  #   restart: always
+  #   networks:
+  #     - bwm
+  #   environment:
+  #     MONGO_INITDB_ROOT_USERNAME: bwm
+  #     MONGO_INITDB_ROOT_PASSWORD: bwm
+
+  # mongo-express:
+  #   image: mongo-express
+  #   restart: always
+  #   depends_on: 
+  #     - mongo
+  #   networks:
+  #     - bwm
+  #   ports:
+  #     - 8081:8081
+  #   environment:
+  #     ME_CONFIG_MONGODB_ADMINUSERNAME: bwm
+  #     ME_CONFIG_MONGODB_ADMINPASSWORD: bwm
+
+
+
+
+
+
 
 networks:
   bwm:
 
 volumes:
   bwm:
+  influxdb-storage:
+  chronograf-storage:
+  grafana-storage:
+    
