fixed different config checks

--- a/config.ini
+++ b/config.ini
@@ -3,11 +3,11 @@ speedtest-server =
 interval = 
 
 [Database]
-type = 
+type = influxdb
 datapath = 
-dbhost = 
-dbuser = 
-dbpassword =  
+dbhost = localhost
+dbuser = bwm
+dbpassword = bwm  
 
 [Logging]
 logpath =
