reset config values

--- a/config.ini
+++ b/config.ini
@@ -3,11 +3,11 @@ speedtest-server =
 interval = 
 
 [Database]
-type = influxdb
+type = 
 datapath = 
-dbhost = localhost
-dbuser = bwm
-dbpassword = bwm  
+dbhost = 
+dbuser = 
+dbpassword =   
 
 [Logging]
 logpath =
