--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,56 +1,38 @@
 version: 2
 
 jobs:
-  build:
-    working_directory: ~/bwm
-    machine: true
-    steps:
-      - checkout
-      
-      - run: mkdir docker
-
-      - run: 
-          name: Building docker image
-          command: docker build -t racoon/bandwidth-monitor .
-      
-      - run:
-          name: Export docker container image
-          command: docker save --output ~/bwm/docker/bwm.tar racoon/bandwidth-monitor
-      
-      - persist_to_workspace:
-          root: ~/bwm/docker
-          paths: 
-            - bwm.tar
-  
   test:
-    machine: true
+    docker:
+      - image: racoon/pylint:latest
+    working_directory: /code
     steps:
       - checkout
-
-      - attach_workspace:
-          at: ~/bwm/docker
-
       - run:
-          name: Import bandwidth-monitor image
-          command: docker load -i ~/bwm/docker/bwm.tar
-
-      - run:
-          name: Run a instance of bandwidth-monitor image
-          command: docker run -d --rm --name bwm -e LOGLEVEL="debug" -e DBTYPE="tinydb" -v ~/bwm/data:/bwm/data racoon/bandwidth-monitor
-
-      - run:
-          name: Wait until the first measurement was made
-          command: sleep 15
-
-      - run:
-          name: Test if data was created
-          command: test -f ~/bwm/data/bwm.json
+          name: Lint code
+          command: pylama /code
+  
+  # build:
+  #   working_directory: ~/bwm
+  #   machine: true
+  #   steps:
+  #     - checkout
+  #     - run: mkdir docker
+  #     - run: 
+  #         name: Building docker image
+  #         command: docker build -t racoon/bandwidth-monitor .
+  #     - run:
+  #         name: Export docker container image
+  #         command: docker save --output ~/bwm/docker/bwm.tar racoon/bandwidth-monitor
+  #     - persist_to_workspace:
+  #         root: ~/bwm/docker
+  #         paths: 
+  #           - bwm.tar
+  
+  
 
 workflows:
   version: 2
   build:
     jobs:
-      - build
-      - test:
-          requires:
-            - build
+      # - build
+      - test
