--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,15 +4,14 @@ jobs:
   lint_pylint:
     docker:
       - image: circleci/python:latest
-    working_directory: /code
     steps:
       - checkout
       - run:
           name: Install pylint
-          command: pip3 install pylint pylint-fail-under
+          command: pip3 install pylint pylint-fail-under && ls -l
       - run:
           name: Linting code
-          command: find /code -type f -name "*.py" | xargs pylint-fail-under --rcfile=/etc/pylintrc "$@"
+          command: find ./ -type f -name "*.py" | xargs pylint-fail-under --rcfile=/etc/pylintrc "$@"
   
   # build:
   #   working_directory: ~/bwm
