--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: pylint-fail-under --fail_under 5 bwm
       - run:
           name: Linting bandwidth-monitor libs
-          command: find ./bwm/ -type f -name "*.py" | xargs pylint-fail-under --fail_under 5
+          command: find ./lib/bwm/ -type f -name "*.py" | xargs pylint-fail-under --fail_under 5
 
   # build:
   #   working_directory: ~/bwm
