--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,11 @@
-version: 2
+version: 2.1
+
+executors:
+  docker-publisher:
+    environment:
+      IMAGE_NAME: racoon/bandwidth-monitor
+    docker:
+      - image: circleci/buildpack-deps:stretch
 
 jobs:
   lint_pylint:
@@ -16,28 +23,49 @@ jobs:
           name: Linting bandwidth-monitor libs
           command: find ./lib/bwm/ -type f -name "*.py" | xargs pylint-fail-under --fail_under 4
 
-  # build:
-  #   working_directory: ~/bwm
-  #   machine: true
-  #   steps:
-  #     - checkout
-  #     - run: mkdir docker
-  #     - run: 
-  #         name: Building docker image
-  #         command: docker build -t racoon/bandwidth-monitor .
-  #     - run:
-  #         name: Export docker container image
-  #         command: docker save --output ~/bwm/docker/bwm.tar racoon/bandwidth-monitor
-  #     - persist_to_workspace:
-  #         root: ~/bwm/docker
-  #         paths: 
-  #           - bwm.tar
-  
-  
+  build-nightly:
+    executor: docker-publisher
+    steps:
+      - checkout
+      - setup_remote_docker
+      - run:
+          name: Build Docker image
+          command: docker build -t $IMAGE_NAME:nightly .
+      - run:
+          name: Archive Docker image
+          command: docker save -o image.tar $IMAGE_NAME:nightly
+      - persist_to_workspace:
+          root: .
+          paths:
+            - ./image.tar
+
+  publish-nightly:
+    executor: docker-publisher
+    steps:
+      - attach_workspace:
+          at: /tmp/workspace
+      - setup_remote_docker
+      - run:
+          name: Load archived Docker image
+          command: docker load -i /tmp/workspace/image.tar
+      - run:
+          name: Publish Docker Image to Docker Hub
+          command: |
+            echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+            docker push $IMAGE_NAME:nightly
 
 workflows:
   version: 2
   build:
     jobs:
-      # - build
       - lint_pylint
+      - build-nightly:
+          filters:
+            branches:
+              only: 31-pipeline-switch
+      - publish-nightly:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
