--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.1'
 
 services:
   bwm:
-    image: racoon/bandwidth-monitor:nightly
+    image: racoon/bandwidth-monitor
     restart: always
     depends_on: 
       - influx
