--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,3 @@
-**/__pycache__
-.vscode/
-data/
-env/
-log/
-temp/
-test.py
-*.json
-templates/
-.devcontainer/
-archive/
-build.sh
-devenv.sh
-init.sh
+.vscode
+venv
+__pycache__
