--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,9 +53,11 @@ jobs:
 
 workflows:
   version: 2
-  build:
+  lint:
     jobs:
       - lint_pylint
+  build:
+    jobs:
       - build-nightly:
           context: docker-publisher
           requires:
