changed grafana file path

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
     networks:
       - bwm
     volumes:
-      - ./grafana-provisioning/:/etc/grafana/provisioning
+      - ./templates/grafana/:/etc/grafana/provisioning
     depends_on:
       - influx
     environment:
